kube/ipfs-api-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: ipfs-api
  namespace: default
spec:
  ports:
    - port: 5001
      targetPort: 5001
  selector:
    service: ipfs
  type: ClusterIP
