kube/ipfs-swarm-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: ipfs-swarm
  namespace: default
  annotations:
    cloud.google.com/network-tier: Standard
spec:
  ports:
    - name: swarm
      port: 4001
      targetPort: 4001
      protocol: TCP
    - name: swarm-udp
      port: 4001
      targetPort: 4001
      protocol: UDP
    - name: websockets
      port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    service: ipfs
  type: LoadBalancer
  externalTrafficPolicy: Local
