kube/ipfs-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ipfs-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
    - ipfs.greyh.at
    secretName: ipfs-tls
  backend:
    serviceName: ipfs
    servicePort: 100
  rules:
  - host: ipfs.greyh.at
    http:
      paths:
      - path: /
        backend:
          serviceName: ipfs
          servicePort: 100
